[workspace]
resolver = "2"

members = ["sololc-webhook-macros","sololc-webhook-sdk"]

[workspace.dependencies]
wit-bindgen = { version = "0.30.0", default-features = false }
sololc-webhook-macros = { version = "0.1.0", default-features = false }
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = {version = "1.0", default-features = false}